2014/09/23 16:00:00
导入 BootStrap 3.2.0 版本至 /bootstrap/3.2.0
==================================================
2014/09/23 17:05:00
导入 CodeIgniter 2.2.0 版本至 /codeigniter/2.2.0
新建 /web 文件夹作为项目入口
==================================================
2014/09/23 17:13:00
/static/css			[新建]
/static/images		[新建]
/static/js			[新建]
/static/upload		[新建]
新建静态文件目录
==================================================
2014/09/23 17:35:00
配置项目入口文件 /web/index.php
==================================================
2014/09/23 17:43:00
优化项目入口文件 /web/index.php
注：只引入框架原生 index.php
==================================================
2014/09/23 23:25:00
优化项目入口文件命令行下访问模式
==================================================
2014/09/23 23:26:00
创建迁移类
==================================================
2014/09/23 23:28:00
创建用户表 user
==================================================
2014/09/24 10:30:00
配置 Grunt 编译配置
==================================================
2014/09/24 11:06:00
前后台分组
==================================================
2014/09/24 13:21:00
优化 GtuntFile 配置 加入后台CSS编译
==================================================
2014/09/24 13:41:00
本地化 jquery 1.11.1 版本 并加入编译配置
==================================================
2014/09/24 15:47:00
本地化 jquery-form 3.51.10 版本 并加入编译配置
==================================================