@@ -43,3 +43,6 @@
 2014/09/24 15:47:00
 本地化 jquery-form 3.51.10 版本 并加入编译配置
 ==================================================
+2014/09/24 18:32:00
+扩展 form_validation 表单验证类 加入 error_array 函数
+==================================================
